# home-assistant-desktop

./: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs
src-tauri/src/commands/: config.rs  ha_client.rs  hass_client.rs  mod.rs  oauth.rs  state.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/utils/: config.rs  hass_api.rs  mod.rs  oauth2.rs
src/components/: windowBar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte  connect.ts
src/routes/login/add/: +page.svelte
src/routes/login/callback/: +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
src/routes/settings/add/: +page.svelte
src/routes/settings/list/: +page.svelte
src/routes/spotlight/: +layout.svelte  +page.svelte
src/store/: entities.ts  server.ts  state.ts
